@@ -1,7 +1,9 @@
 package yuhan.pro.mainserver.core;
 
+import java.util.Arrays;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -10,13 +12,13 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import yuhan.pro.mainserver.domain.member.service.OAuth2AuthenticationSuccessHandler;
-import yuhan.pro.mainserver.domain.member.service.OAuth2Service;
-import yuhan.pro.mainserver.sharedkernel.jwt.JwtAccessDeniedHandler;
-import yuhan.pro.mainserver.sharedkernel.jwt.JwtAuthenticationEntryPoint;
-import yuhan.pro.mainserver.sharedkernel.jwt.JwtAuthenticationProvider;
-import yuhan.pro.mainserver.sharedkernel.jwt.JwtSecurityConfig;
-import yuhan.pro.mainserver.sharedkernel.jwt.JwtValidator;
+import yuhan.pro.mainserver.domain.auth.service.OAuth2AuthenticationSuccessHandler;
+import yuhan.pro.mainserver.domain.auth.service.OAuth2Service;
+import yuhan.pro.mainserver.sharedkernel.security.handler.JwtAccessDeniedHandler;
+import yuhan.pro.mainserver.sharedkernel.security.handler.JwtAuthenticationEntryPoint;
+import yuhan.pro.mainserver.sharedkernel.security.authentication.JwtAuthenticationProvider;
+import yuhan.pro.mainserver.sharedkernel.security.config.JwtSecurityConfig;
+import yuhan.pro.mainserver.sharedkernel.security.jwt.JwtValidator;
 
 @Configuration
 @RequiredArgsConstructor
@@ -28,6 +30,9 @@ public class SecurityConfig {
   private final OAuth2Service oAuth2Service;
   private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
   private final JwtAccessDeniedHandler accessDeniedHandler;
+
+  @Value("${cors.allowed-origins:http://localhost:3000}")
+  private String allowedOrigins;
 
 
   @Bean
@@ -65,7 +70,7 @@ public class SecurityConfig {
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOrigins(List.of("http://localhost:3000"));
+    configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
     configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
     configuration.setAllowedHeaders(List.of("*"));
     configuration.setAllowCredentials(true);
